# captcha_solver_ui

./: .gitignore  Cargo.toml  LICENSE  build.rs  licenserc.toml  rustfmt.toml
src/: lib.rs  slint_ui.rs  utils.rs
src/solvers/: click_captcha.rs  mod.rs  slide_or_rotate.rs
ui/: click-captcha-image.slint  click-captcha.slint  eillpse.slint  main.slint  slide-or-rotate.slint  types.slint
