# captcha_solver_ui
# Copyright (C) 2025 worksoup <https://github.com/worksoup/>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "captcha_solver_ui"
version = "0.0.1"
edition = "2021"
authors = ["worksoup"]
license = "MIT"
repository = "https://github.com/worksoup/captcha_solver_ui"

[dependencies]
yapt = { git = "https://github.com/worksoup/yapt.git" }
image = "0.25"
slint = "1.12"

[build-dependencies]
slint-build = "1.12"
